--- a/config.toml
+++ b/config.toml
@@ -2,14 +2,16 @@ base_url = "https://nekodjin.org"
 
 default_language = "en"
 
-minify_html = true
+# minify_html = true
 compile_sass = true
 build_search_index = false
+
+[markdown]
+highlight_code = true
+highlight_theme = "css"
 
 external_links_target_blank = true
 external_links_no_referrer  = true
 
-[markdown]
-highlight_code = true
-
 [extra]
+
