--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ base_url = "https://nekodjin.org"
 
 default_language = "en"
 
-# minify_html = true
+minify_html = true
 compile_sass = true
 build_search_index = false
 
